# rust-chess

./: .gitignore  Cargo.toml  LICENSE
src/: main.rs
src/engine/: evaluation.rs  mod.rs  scores.rs
src/engine/search/: alpha_beta.rs  mod.rs  monte_carlo.rs
src/game/: mod.rs
src/interface/: arguments.rs  cli.rs  mod.rs  shell.rs
src/rules/: mod.rs
src/rules/board/: bitboards.rs  mod.rs  positions.rs  squares.rs  state.rs
src/rules/pieces/: mod.rs  movement.rs
src/testing/: mod.rs  perft.rs  zobrist.rs
src/util/: concurrency.rs  data.rs  errors.rs  fen.rs  mod.rs  zobrist.rs
src/util/concurrency/: channels.rs  mod.rs  pools.rs  queues.rs  tasks.rs
