[package]
name = "rust_chess"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
fxhash      = "0.2.1"
indexmap    = "1.7.0"
shell-words = "1.0.0"
rustyline   = "9.1.1"
tabled      = "0.3.0"
