[package]
name = "rust_chess"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
fxhash      = "0.2.1"
crossbeam   = "0.8.1"
lockfree    = "0.5.1"
shell-words = "1.0.0"
rustyline   = "9.1.1"
tabled      = "0.3.0"
num-format  = "0.4.0"
bytefmt     = "0.1.5"